--- a/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
@@ -9,7 +9,48 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:intervalTime="2000"
-        app:animStyle="Accordion"/>
+        app:intervalTime="2000" />
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_list_string"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="List String"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_list_int"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="List int"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_string"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="String"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_int"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="int"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
 </LinearLayout>
