--- a/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,8 +13,7 @@
     <com.itheima.loopviewpager.LoopViewPager
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:intervalTime="3000" />
+        android:layout_height="200dp" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
