--- a/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
@@ -5,27 +5,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="添加图片切换动画" />
+
     <com.itheima.loopviewpager.LoopViewPager
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:intervalTime="3000">
+        app:intervalTime="5000"
+        app:scrollEnable="true"
+        app:touchEnable="false">
 
         <com.itheima.loopviewpager.LoopTitleView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="#55000000"
-            android:gravity="left|center_vertical"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:maxLines="1"
             android:padding="10dp"
-            android:textColor="#FF0000"
-            android:textSize="16sp" />
+            android:textColor="#00FF00"
+            android:textSize="18sp" />
 
         <com.itheima.loopviewpager.LoopDotsView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="right|center_vertical"
             android:layout_margin="10dp"
+            android:orientation="vertical"
             app:dotHeight="10dp"
             app:dotRange="10dp"
             app:dotResource="@mipmap/dot_normal"
