--- a/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
@@ -15,8 +15,8 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:intervalTime="5000"
-        app:scrollEnable="true"
+        app:intervalTime="3000"
+        app:scrollEnable="false"
         app:touchEnable="false">
 
         <com.itheima.loopviewpager.LoopTitleView
@@ -26,8 +26,9 @@
             android:gravity="center"
             android:maxLines="1"
             android:padding="10dp"
-            android:textColor="#00FF00"
-            android:textSize="18sp" />
+            android:textColor="#FF0000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <com.itheima.loopviewpager.LoopDotsView
             android:layout_width="wrap_content"
