--- a/SimpleDemo/src/main/res/layout/activity_simple_demo2.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo2.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="添加标题和圆点" />
+        android:text="2、添加标题和圆点" />
 
     <com.itheima.loopviewpager.LoopViewPager
         android:id="@+id/lvp_pager"
