--- a/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
@@ -15,15 +15,14 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:animStyle="Cube"
+        app:animStyle="Accordion"
         app:animTime="1500"
-        app:scrollEnable="false"
         app:intervalTime="2000">
 
         <com.itheima.loopviewpager.LoopTitleView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:maxLines="1"
             android:padding="10dp"
@@ -34,9 +33,8 @@
         <com.itheima.loopviewpager.LoopDotsView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
+            android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="10dp"
-            android:orientation="vertical"
             app:dotHeight="10dp"
             app:dotRange="10dp"
             app:dotResource="@mipmap/dot_normal"
