--- a/SimpleDemo/src/main/res/layout/activity_simple_demo4.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo4.xml
@@ -15,7 +15,7 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:intervalTime="3000"
+        app:loopTime="3000"
         app:scrollEnable="false">
 
         <com.itheima.loopviewpager.LoopTitleView
