--- a/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo3.xml
@@ -15,7 +15,7 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:animStyle="Accordion"
+        app:animStyle="AccordionLeft"
         app:animTime="1500"
         app:loopTime="2000">
 
