--- a/SimpleDemo/src/main/res/layout/activity_simple_demo2.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo2.xml
@@ -15,29 +15,38 @@
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:loopTime="3000">
+        app:loopTime="3000"
+        app:animTime="1000"
+        app:animStyle="cube">
 
-        <com.itheima.loopviewpager.LoopTitleView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="#55000000"
-            android:maxLines="1"
-            android:padding="10dp"
-            android:textColor="#FF0000"
-            android:textSize="16sp" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-        <com.itheima.loopviewpager.LoopDotsView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:layout_margin="10dp"
-            app:dotColor="#55000000"
-            app:dotHeight="15dp"
-            app:dotRange="15dp"
-            app:dotSelectColor="#FFFFFF"
-            app:dotShape="oval"
-            app:dotWidth="15dp" />
+
+            <com.itheima.loopviewpager.LoopTitleView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:textColor="#FF0000"
+                android:textSize="16sp" />
+
+            <com.itheima.loopviewpager.LoopDotsView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                app:dotColor="#FFFFFF"
+                app:dotSelectColor="#FF0000"
+                app:dotShape="oval"
+                app:dotSize="10dp" />
+
+        </LinearLayout>
 
     </com.itheima.loopviewpager.LoopViewPager>
 
