--- a/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
+++ b/SimpleDemo/src/main/res/layout/activity_simple_demo1.xml
@@ -1,60 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="1、添加轮播图片" />
-
     <com.itheima.loopviewpager.LoopViewPager
         android:id="@+id/lvp_pager"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+        android:layout_height="200dp"
+        app:animStyle="accordion"
+        app:animTime="1000"
+        app:loopTime="3000">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_gravity="bottom"
+            android:background="#55000000"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-            <Button
-                android:id="@+id/btn_list_string"
+            <com.itheima.loopviewpager.LoopTitleView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:textColor="#FF0000"
+                android:textSize="16sp" />
+
+            <com.itheima.loopviewpager.LoopDotsView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="AddListString"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btn_list_int"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="AddListInt"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btn_array_string"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="AddArrayString"
-                android:textAllCaps="false" />
-
-            <Button
-                android:id="@+id/btn_array_int"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="AddArrayInt"
-                android:textAllCaps="false" />
+                android:layout_marginLeft="10dp"
+                app:dotColor="#FFFFFF"
+                app:dotSelectColor="#FF0000"
+                app:dotShape="diamond"
+                app:dotSize="15dp"
+                app:dotRange="5dp"/>
 
         </LinearLayout>
 
-    </HorizontalScrollView>
+    </com.itheima.loopviewpager.LoopViewPager>
 
 </LinearLayout>
